Use parameterized test for DatabaseSearcherTest